--- a/mycss.css
+++ b/mycss.css
@@ -1,40 +1,111 @@
-
+body {
+  color: #566787;
+  background: #f5f5f5;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 13px;
+}
 .form-wrapper
 {
-	width:400px;
-	margin:auto;
-	margin-top:20px;
-	align-self: center;
-	position: relative;
-	border: 0.5px solid silver; 
-	border-radius:25px;
-	margin-bottom:15px;
+  width:400px;
+  margin:auto;
+  margin-top:20px;
+  align-self: center;
+  position: relative;
+  margin-bottom:15px;
 }
 .wrapper{
-	width:50%;
-	margin:auto;
+  width:50%;
+  margin:auto;
 }
 .btn-primary
 {
   height:50px;
 }
 .form-group{
-	margin:15px;
+  margin:15px;
 }
 form label {
-	margin-top:5px;
+  margin-top:5px;
 }
 h2 {
-	font-size: 20px;
-	font-family: serif;
-	padding:10px;
-	text-align:center;
+  font-size: 20px;
+  font-family: serif;
+  padding:10px;
+  text-align:center;
 }
 .links {
-	width:300px;
-	height:auto;
-	margin:auto;
-	position: relative;
-	text-align: center;
+  width:300px;
+  height:auto;
+  margin:auto;
+  position: relative;
+  text-align: center;
 }
+
+.table-wrapper {
+  background: #fff;
+  padding: 20px 25px;
+  margin: 30px 0;
+  border-radius:1px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.247);
+}
+.table-title {        
+  padding-bottom: 15px;
+  color: black;
+  padding: 16px 30px;
+  margin: -20px -25px 10px;
+}
+.table-title h2 {
+  margin: 5px 0 0;
+  font-size: 24px;
+  text-align: center;
+}
+table.table td a.edit {
+  color: #FFC107;
+}
+table.table td a.delete {
+  color: #F44336;
+}
+table.table td i {
+  font-size: 19px;
+}
+
+table.table tr th, table.table tr td {
+  border-color: #e9e9e9;
+  padding: 12px 15px;
+  vertical-align: middle;
+}
+table.table tr th:first-child {
+  width: 60px;
+}
+table.table tr th:last-child {
+  width: 100px;
+}
+table.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #fcfcfc;
+}
+table.table-striped.table-hover tbody tr:hover {
+  background: #f5f5f5;
+}
+table.table th i {
+  font-size: 13px;
+  margin: 0 5px;
+  cursor: pointer;
+} 
+table.table td:last-child i {
+  opacity: 0.9;
+  font-size: 22px;
+  margin: 0 5px;
+}
+table.table td a {
+  font-weight: bold;
+  color: #566787;
+  display: inline-block;
+  text-decoration: none;
+  outline: none !important;
+}
+table.table td a:hover {
+  color: #2196F3;
+}
+
+
 
