--- a/mycss.css
+++ b/mycss.css
@@ -3,19 +3,71 @@ body {
   background: #f5f5f5;
   font-family: 'Varela Round', sans-serif;
   font-size: 13px;
+  min-height: 100vh;
+  width:100%;
 }
-.form-wrapper
-{
-  width:400px;
-  margin:auto;
-  margin-top:20px;
-  align-self: center;
-  position: relative;
-  margin-bottom:15px;
+
+.container{
+  min-height:70vh;
+  width:100%;
 }
 .wrapper{
-  width:50%;
+  width:60%;
   margin:auto;
+}
+.navbar
+{
+  height:70px;
+  background-color: #0080ff;
+}
+.navbar-header .navbar-brand
+{
+  padding:20px;
+  font-size:20px;
+  color:white;
+}
+.navbar-left
+{
+  list-style: none;
+  padding:20px;
+  font-size:17px;
+}
+.navbar-left li
+{ 
+  padding-right: 30px;
+  float:left;
+}
+.navbar-left li a
+{
+  text-decoration: none;
+  color:white;
+}
+.navbar-left li :hover
+{
+  cursor: :pointer;
+  text-decoration: none;
+  color:;
+}
+.navbar-right
+{
+  list-style: none;
+  padding:20px;
+  font-size:17px;
+}
+.navbar-right li
+{ 
+  padding-right: 10px;
+}
+.navbar-right li a
+{
+  text-decoration: none;
+  color:white;
+}
+.navbar-right li :hover
+{
+  cursor: :pointer;
+  text-decoration: none;
+  color:;
 }
 .btn-primary
 {
@@ -45,25 +97,76 @@ h2 {
   margin:auto;
   position: relative;
   text-align: center;
+  margin-bottom: 10px;
 }
-
-.table-wrapper {
-  background: #fff;
-  padding: 20px 25px;
-  margin: 30px 0;
-  border-radius:1px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.247);
+.btn-holder{
+  float:right;
+  
 }
-.table-title {        
-  padding-bottom: 15px;
-  color: black;
-  padding: 16px 30px;
-  margin: -20px -25px 10px;
+.box-wrapper
+{
+  width:30%;
+  height:600px;
+  display: flex;
+  flex-direction: column;
 }
-.table-title h2 {
-  margin: 5px 0 0;
-  font-size: 24px;
+.form-box
+{
+  width:100%;
+  border:solid 1px;
+  border-color:#edf1f5;
+  min-height:300px;
+  display: flex;
+  flex-direction: column;
+  margin:5px 0px 0px -80px;
+}
+.form-box .form-title{
+  font-family: 'Varela Round', sans-serif;
   text-align: center;
+  text-decoration: underline;
+  margin-bottom:30px;
+}
+.error-flash{
+  margin:30px 0px 0px 20px;
+  font: 16px;
+  color:red;
+}
+.form-box .form-group{
+  margin:10px 20px 0px 20px;
+}
+.form-box .form-group button{
+  float:right;
+  margin-top:10px;
+}
+.form-box .form-group a{
+  margin-bottom:10px;
+}
+.table-wrapper {
+  width:70%;
+  min-height:300px;
+  display: flex;
+  flex-direction: column;
+  float:right;
+  margin-top:-600px;
+  border:solid 1px;
+  border-color:#edf1f5;
+}
+.table-wrapper .table-title{
+  font-family: 'Varela Round', sans-serif;
+  text-align: center;
+}
+.comment-wrapper {
+  width:70%;
+  min-height:300px;
+  display: flex;
+  flex-direction: column;
+  float:right;
+  margin-top:-600px;
+  border:solid 1px;
+  border-color:#edf1f5;
+}
+table{
+  width:100%;
 }
 table.table td a.edit {
   color: #FFC107;
@@ -71,8 +174,18 @@ table.table td a.edit {
 table.table td a.delete {
   color: #F44336;
 }
+table.table td a.view {
+  color: white;
+}
+table.table td a.view:hover {
+  color: white;
+}
 table.table td i {
-  font-size: 19px;
+  font-size: 30px;
+}
+table.table th{
+  font-size: 15px !important;
+  font-weight: normal !important;
 }
 
 table.table tr th, table.table tr td {
@@ -81,10 +194,10 @@ table.table tr th, table.table tr td {
   vertical-align: middle;
 }
 table.table tr th:first-child {
-  width: 60px;
+  width: 40px;
 }
 table.table tr th:last-child {
-  width: 100px;
+  width: 90px;
 }
 table.table-striped tbody tr:nth-of-type(odd) {
   background-color: #fcfcfc;
@@ -111,7 +224,89 @@ table.table td a {
 }
 table.table td a:hover {
   color: #2196F3;
+  cursor: pointer;
+}
+.empty-div
+{
+  width:50%;
+  margin-top:-600px;
+  float:right;
+}
+.msg-flash
+{
+  width:100%;
+}
+.form-group ul{
+  margin-top:-10px;
+  margin-bottom: 0pc;
+}
+.form-group li:hover{
+  cursor: pointer;
+  background-color: blue;
+  color: white;
 }
 
 
+
+.msg-error{
+  color:red;
+  margin:0px 0px 10px 20px;
+}
+
+footer{
+  margin-top:100px;
+  width:100%;
+  background-color: #137281;
+  min-height: 30vh;
+  color:white;  
+}
+
+footer .footer-top{
+  margin:auto;
+  width:50%;
+  padding:10px;
+}
+footer .footer-top ul{
+  list-style: none;
+  padding:20px;
+}
+footer .footer-top ul li{
+  float:left;
+  color:white;
+  padding:30px;
+}
+footer .footer-top ul li a{
+  color:white;
+}
+.section
+{
+  width:100%;
+  margin-left:30px;
+}
+.dot {
+    height: 7px;
+    width: 7px;
+    margin-top: 3px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block
+}
+.coment-bottom{
+  margin-top: 40px;
+}
+.coment-bottom button
+{
+  float:right;
+  margin-top:-35px;
+  margin-right:-90px;
+}
+.commented-section
+{
+  margin-top: 20px;
+  margin-bottom:5px;
+}
+.empty-div form button{
+  float:right;
+  margin-top:10px;
+}
 
