--- a/mycss.css
+++ b/mycss.css
@@ -1,13 +1,15 @@
+
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   color: #566787;
   background: #f5f5f5;
   font-family: 'Varela Round', sans-serif;
   font-size: 13px;
-  min-height: 100vh;
-  width:100%;
 }
 
-.container{
+.box{
   min-height:70vh;
   width:100%;
 }
@@ -112,13 +114,11 @@ h2 {
 }
 .form-box
 {
-  width:100%;
+  width:auto;
   border:solid 1px;
   border-color:#edf1f5;
   min-height:300px;
-  display: flex;
-  flex-direction: column;
-  margin:5px 0px 0px -80px;
+  margin:5px 0px 0px 10px;
 }
 .form-box .form-title{
   font-family: 'Varela Round', sans-serif;
@@ -142,7 +142,8 @@ h2 {
   margin-bottom:10px;
 }
 .table-wrapper {
-  width:70%;
+  width:65%;
+  margin-right:10px;
   min-height:300px;
   display: flex;
   flex-direction: column;
@@ -154,16 +155,6 @@ h2 {
 .table-wrapper .table-title{
   font-family: 'Varela Round', sans-serif;
   text-align: center;
-}
-.comment-wrapper {
-  width:70%;
-  min-height:300px;
-  display: flex;
-  flex-direction: column;
-  float:right;
-  margin-top:-600px;
-  border:solid 1px;
-  border-color:#edf1f5;
 }
 table{
   width:100%;
@@ -228,9 +219,19 @@ table.table td a:hover {
 }
 .empty-div
 {
-  width:50%;
+  width:65%;
   margin-top:-600px;
   float:right;
+  margin-right:10px;
+  min-height:300px;
+}
+.empty-div .content{
+  margin-left:20px;
+  margin-bottom:10px;
+}
+.empty-div .content img {
+  border-radius: 50%;
+  margin:10px;
 }
 .msg-flash
 {
@@ -278,35 +279,22 @@ footer .footer-top ul li{
 footer .footer-top ul li a{
   color:white;
 }
-.section
+.container .comments-list
 {
-  width:100%;
-  margin-left:30px;
+  margin:5px 0px 0px 20px;
 }
-.dot {
-    height: 7px;
-    width: 7px;
-    margin-top: 3px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block
+.container .form .form-group button{
+  margin:5px 0px 0px 650px;
 }
-.coment-bottom{
-  margin-top: 40px;
+.user_name{
+    font-size:14px;
+    font-weight: bold;
 }
-.coment-bottom button
-{
-  float:right;
-  margin-top:-35px;
-  margin-right:-90px;
-}
-.commented-section
-{
-  margin-top: 20px;
-  margin-bottom:5px;
+.comments-list .media{
+    border-bottom: 1px dotted #ccc;
 }
 .empty-div form button{
   float:right;
-  margin-top:10px;
+  margin-top:5px;
 }
 
