--- a/mycss.css
+++ b/mycss.css
@@ -1,163 +1,194 @@
-
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: #566787;
-  background: #f5f5f5;
+*{
+  margin:0;
+  padding:0;
   font-family: 'Varela Round', sans-serif;
-  font-size: 13px;
+}
+body {
+  width:100%;
+  height:100vh;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  background-color: #fff;
+}
+
+.alert{
+  width:100%;
+}
+.btn-div{
+  padding:.5rem;
+  margin-bottom:3rem;
+}
+.btn-div button{
+  position:absolute;
+  right:0;
+}
+.ml-10{
+  margin-left:1rem;
+}
+.mbr-5{
+  margin-bottom: .5rem;
+  margin-right: .5rem;
+}
+.mt-10{
+  margin-top:1rem;
+}
+.mb-10{
+  margin-bottom:1rem;
+}
+.mr-10{
+  margin-right:1rem;
+}
+.navbar{
+  height:10vh;
+}
+button{
+  color:white !important;
+}
+.navbar-brand{
+  font-weight: 700;
+  font-size:2rem;
+
+}
+.collapse{
+  margin-left:4rem;
+}
+.collapse .nav-item{
+  padding:1rem;
+}
+.collapse .nav-item .nav-link{
+  font-size:1rem;
+  color:#fff;
+  text-transform: uppercase;
+}
+.dropdown .dropdown-item{
+  font-size: .8rem;
+  font-weight: bold;
+}
+.collapse .dropdown:hover{
+  cursor: pointer;
+}
+
+.collapse .nav-item .right{
+  position:absolute;
+  right:0;
 }
 
 .box{
-  min-height:70vh;
+  min-height:80vh;
   width:100%;
+  margin-top:1rem;
 }
 .wrapper{
   width:60%;
   margin:auto;
 }
-.navbar
-{
-  height:70px;
-  background-color: #0080ff;
-}
-.navbar-header .navbar-brand
-{
-  padding:20px;
-  font-size:20px;
-  color:white;
-}
-.navbar-left
-{
-  list-style: none;
-  padding:20px;
-  font-size:17px;
-}
-.navbar-left li
-{ 
-  padding-right: 30px;
-  float:left;
-}
-.navbar-left li a
-{
-  text-decoration: none;
-  color:white;
-}
-.navbar-left li :hover
-{
-  cursor: :pointer;
-  text-decoration: none;
-  color:;
-}
-.navbar-right
-{
-  list-style: none;
-  padding:20px;
-  font-size:17px;
-}
-.navbar-right li
-{ 
-  padding-right: 10px;
-}
-.navbar-right li a
-{
-  text-decoration: none;
-  color:white;
-}
-.navbar-right li :hover
-{
-  cursor: :pointer;
-  text-decoration: none;
-  color:;
-}
-.btn-primary
-{
-  height:50px;
-}
 .form-group{
-  margin:15px;
+  margin:1.5rem;
 }
 .form-title h2{
-  font-size: 24px;
+  font-size: 2.4rem;
 }
-.alert{
-  margin-top:-15px;
-}
+
 form label {
-  margin-top:5px;
-}
-h2 {
-  font-size: 20px;
-  font-family: serif;
-  padding:10px;
-  text-align:center;
+  margin-top:.5rem;
 }
 .links {
-  width:300px;
+  width:30rem;
   height:auto;
   margin:auto;
   position: relative;
   text-align: center;
-  margin-bottom: 10px;
-}
-.btn-holder{
-  float:right;
-  
+  margin-bottom: 1rem;
 }
 .box-wrapper
 {
-  width:30%;
-  height:600px;
-  display: flex;
-  flex-direction: column;
+  width:25%;
+  height:80vh;
+  float:left;
 }
 .form-box
 {
-  width:auto;
-  border:solid 1px;
-  border-color:#edf1f5;
-  min-height:300px;
-  margin:5px 0px 0px 10px;
+  width:100%;
+  margin:.5rem .5rem 0rem 1rem;
 }
 .form-box .form-title{
-  font-family: 'Varela Round', sans-serif;
   text-align: center;
-  text-decoration: underline;
-  margin-bottom:30px;
+  margin-top:1rem;
+  margin-bottom:3rem;
 }
-.error-flash{
-  margin:30px 0px 0px 20px;
-  font: 16px;
-  color:red;
+.form-box .form-title h5{
+  font-size:1.5rem;
+  color:#000;
+}
+.form-box .form-title span{
+  font-size:1.5rem;
+  color:#2929a4;
 }
 .form-box .form-group{
-  margin:10px 20px 0px 20px;
+  margin:1rem 1rem 0rem 1rem;
 }
 .form-box .form-group button{
   float:right;
-  margin-top:10px;
+  color:white;
+  margin:1rem 0rem .5rem 0rem;
 }
 .form-box .form-group a{
-  margin-bottom:10px;
+  margin-bottom:1rem;
+}
+.form-group ul{
+  margin-top:-1rem;
+}
+.form-group li:hover{
+  cursor: pointer;
+  background-color: blue;
+  color: white;
 }
 .table-wrapper {
-  width:65%;
-  margin-right:10px;
-  min-height:300px;
-  display: flex;
-  flex-direction: column;
+  width:70%;
+  height:80vh;
   float:right;
-  margin-top:-600px;
-  border:solid 1px;
-  border-color:#edf1f5;
+  margin-right:1rem;
+  border-left: .5rem solid #edf1f5; 
 }
-.table-wrapper .table-title{
-  font-family: 'Varela Round', sans-serif;
-  text-align: center;
+.scrollable{
+  overflow-x:hidden;
 }
-table{
+.table-wrapper .right-button{
   width:100%;
+  height:3.5rem;
+  margin-right:1rem;
+  background-color: #f8f8ff;
+  border-bottom:.1rem solid #edf1f5;
+}
+.table-wrapper .right-button button{
+  float:right;
+  margin-top:.5rem;
+  margin-right:.5rem;
+  height:2.5rem !important;
+}
+.table-wrapper .table
+{
+  font-size:.9rem;
+  margin-left: .5rem;
+}
+.table-wrapper .table-title h5{
+  text-align: center;
+  font-size:1.5rem;
+  color:#000;
+  height:30px;
+}
+.table-wrapper .table-title span{
+  font-weight:700;
+  font-size:1.5rem;
+  color:#2929a4;
+}
+a.disabled{
+  pointer-events: none;
+  opacity:0.2
+}
+.disabled-td{
+  opacity:0.2;
+  pointer-events: none;
 }
 table.table td a.edit {
   color: #FFC107;
@@ -172,96 +203,135 @@ table.table td a.view:hover {
   color: white;
 }
 table.table td i {
-  font-size: 30px;
+  font-size: 3rem;
 }
 table.table th{
-  font-size: 15px !important;
-  font-weight: normal !important;
+  font-size: 1rem;
+  font-weight: normal;
 }
 
 table.table tr th, table.table tr td {
   border-color: #e9e9e9;
-  padding: 12px 15px;
   vertical-align: middle;
+  padding:.7rem;
 }
-table.table tr th:first-child {
-  width: 40px;
-}
-table.table tr th:last-child {
-  width: 90px;
-}
-table.table-striped tbody tr:nth-of-type(odd) {
-  background-color: #fcfcfc;
-}
-table.table-striped.table-hover tbody tr:hover {
-  background: #f5f5f5;
-}
-table.table th i {
-  font-size: 13px;
-  margin: 0 5px;
-  cursor: pointer;
-} 
 table.table td:last-child i {
   opacity: 0.9;
-  font-size: 22px;
-  margin: 0 5px;
-}
-table.table td a {
-  font-weight: bold;
-  color: #566787;
-  display: inline-block;
-  text-decoration: none;
-  outline: none !important;
+  font-size: 1.4rem;
+  margin: .3rem .3rem;
 }
 table.table td a:hover {
   color: #2196F3;
   cursor: pointer;
 }
+.div-right{
+  display:none;
+  float:right;
+}
 .empty-div
 {
   width:65%;
-  margin-top:-600px;
   float:right;
-  margin-right:10px;
-  min-height:300px;
+  margin-right:1rem;
+  height:80vh;
+  border-left: .5rem solid #edf1f5; 
+}
+.full-width{
+  width:100% !important;
 }
 .empty-div .content{
-  margin-left:20px;
-  margin-bottom:10px;
+  margin:1rem 0px 1rem 2rem;
 }
-.empty-div .content img {
-  border-radius: 50%;
-  margin:10px;
+.empty-div .content p{
+  font-size: 1.2rem;
 }
-.msg-flash
-{
+
+.empty-div form button{
+  float:right;
+  margin-top:.5rem;
+}
+
+.error-flash{
+  color:red;
+  margin-left: 1rem;
+}
+.pagination-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: .5rem solid #edf1f5;
+}
+
+/*comment section*/
+section.comment{
+  width:45%;
+  height:80vh;
+  overflow-x: hidden;
+  float:right;
+  margin-right:.5rem;
+  border-left: .5rem solid #edf1f5; 
+}
+.comment .title{
+  background-color: #85B0BE;
+  color:#fff;
+  margin-left:.4rem;
+}
+.comment .title h5{
+  font-weight: 500;
+  padding:1rem;
+  font-size:1.2rem;
+
+}
+.comment .content{
+  margin-right:.5rem;
   width:100%;
 }
-.form-group ul{
-  margin-top:-10px;
-  margin-bottom: 0pc;
+.content .form{
+  margin-bottom:4rem;
 }
-.form-group li:hover{
-  cursor: pointer;
-  background-color: blue;
-  color: white;
+.content .form button{
+  float:right;
+  margin-top:1rem;
 }
-
-
-
-.msg-error{
-  color:red;
-  margin:0px 0px 10px 20px;
+.content .comment-list{
+  height:5rem;
+  border-bottom:.2rem solid #edf1f5;
+  margin-left:2rem;
+  margin-bottom:1rem;
 }
+.comment-list .comment-head{
+  display:flex;
+  justify-content: flex-start;
+}
+.comment-head span.time{
+  margin-left:2rem;
+  margin-top:.3rem;
+  font-size: .7rem;
+
+}
+span.dot{
+  height: .5rem;
+  width: .5rem;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right:.2rem;
+}
+.comment-body p{
+  font-size:1rem;
+}
+.comment-section{
+  margin:1rem;
+  border-top: .5rem solid #edf1f5;
+}
+/*end of comment section*/
 
 footer{
-  margin-top:100px;
   width:100%;
   background-color: #137281;
-  min-height: 30vh;
+  min-height: 20vh;
   color:white;  
 }
-
 footer .footer-top{
   margin:auto;
   width:50%;
@@ -279,22 +349,9 @@ footer .footer-top ul li{
 footer .footer-top ul li a{
   color:white;
 }
-.container .comments-list
-{
-  margin:5px 0px 0px 20px;
-}
-.container .form .form-group button{
-  margin:5px 0px 0px 650px;
-}
-.user_name{
-    font-size:14px;
-    font-weight: bold;
-}
-.comments-list .media{
-    border-bottom: 1px dotted #ccc;
-}
-.empty-div form button{
-  float:right;
-  margin-top:5px;
+input.largerCheckbox{
+   width: 2rem;
+   height: 1.5rem;
+   margin:.5rem;
 }
 
